Arreglar validación del tipo de movimiento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=inventario
 
+# Configuración de la base de datos
+spring.datasource.url=jdbc:postgresql://webminube.ddns.net:5432/inventario_db
+spring.datasource.username=remoto
+spring.datasource.password=y050y1r0nm4n*
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.initialization-mode=always
+spring.datasource.schema=public
