se organiza la estructura y los comentarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,22 @@
 spring.application.name=inventario
 
-# Configuración de la base de datos
-spring.datasource.url=jdbc:postgresql://webminube.ddns.net:5432/inventario_db
+# Configuraciï¿½n de la base de datos
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventario_db
 spring.datasource.username=remoto
-spring.datasource.password=y050y1r0nm4n*
+spring.datasource.password=pruebatecnica123*
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+app.datasource.jdbc-url=jdbc:postgresql://localhost:5432/inventario_db
+app.datasource.username=remoto
+app.datasource.password=pruebatecnica123*
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.initialization-mode=always
+spring.sql.init.mode=never
 spring.datasource.schema=public
+
+spring.datasource.separator=;
